Remove GetAllBooks endpoint
