# server/src/main/java/ru/george/booksharing/server/controller/BooksController.java
@@ -2,11 +2,8 @@ package ru.george.booksharing.server.controller;
 
 import org.springframework.web.bind.annotation.*;
 import ru.george.booksharing.server.controller.dto.CreateBookRequestBody;
-import ru.george.booksharing.server.controller.dto.GetBookResponse;
 import ru.george.booksharing.server.model.Book;
 import ru.george.booksharing.server.service.BooksService;
-
-import java.util.List;
 
 @RestController
 @RequestMapping("/books")
@@ -20,11 +17,6 @@ public class BooksController {
     @PostMapping(consumes = {"application/json"})
     public Book createBook(@RequestBody CreateBookRequestBody requestBody) {
         return booksService.createBook(requestBody);
-    }
-
-    @GetMapping
-    public List<GetBookResponse> getBooks() {
-        return booksService.getBooks();
     }
 
     @DeleteMapping(value = "/{id}", consumes = {"application/json"})
